Import of SHARYANTO/File-Copy-Undoable-0.02 from CPAN.
gitpan-cpan-distribution: File-Copy-Undoable
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/File-Copy-Undoable-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.01
+version=0.02
 
 name=File-Copy-Undoable
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -14,6 +14,7 @@ repository=http://github.com/sharyanto/perl-File-Copy-Undoable
 [Prereqs / TestRequires]
 File::chdir=0
 File::Slurp=0
+File::Which=0
 Test::More=0.98
 Test::Perinci::Tx::Manager=0.41
 
@@ -27,5 +28,6 @@ perl=5.010001
 Builtin::Logged=0
 File::Trash::Undoable=0.08
 Log::Any=0
+;PerlX::Maybe=0
 SHARYANTO::File::Util=0.27
 SHARYANTO::Proc::ChildError=0
