--- a/META.yml
+++ b/META.yml
@@ -6,13 +6,12 @@ build_requires:
   File::Slurp: 0
   File::Which: 0
   File::chdir: 0
-  Module::Build: 0.3601
   Test::More: 0.98
   Test::Perinci::Tx::Manager: 0.41
 configure_requires:
-  Module::Build: 0.3601
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,9 +24,8 @@ requires:
   Rinci: v1.1.29
   SHARYANTO::File::Util: 0.27
   SHARYANTO::Proc::ChildError: 0
-  Setup: v1.0.4
   perl: 5.010001
 resources:
   homepage: http://metacpan.org/release/File-Copy-Undoable
   repository: http://github.com/sharyanto/perl-File-Copy-Undoable
-version: 0.03
+version: 0.04
