Import of SHARYANTO/File-Copy-Undoable-0.05 from CPAN.
gitpan-cpan-distribution: File-Copy-Undoable
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SHARYANTO/File-Copy-Undoable-0.05.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,19 +1,16 @@
-version=0.04
+version=0.05
 
 name=File-Copy-Undoable
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
 
-[MetaResources]
-homepage=http://metacpan.org/release/File-Copy-Undoable
-repository=http://github.com/sharyanto/perl-File-Copy-Undoable
-
-[@SHARYANTO]
+[@Author::SHARYANTO]
+:version=0.23
 
 [Prereqs / TestRequires]
 File::chdir=0
-File::Slurp=0
+File::Slurp::Tiny=0
 File::Which=0
 Test::More=0.98
 Test::Perinci::Tx::Manager=0.41
@@ -27,5 +24,5 @@ Builtin::Logged=0
 File::Trash::Undoable=0.08
 Log::Any=0
 ;PerlX::Maybe=0
+Proc::ChildError=0
 SHARYANTO::File::Util=0.27
-SHARYANTO::Proc::ChildError=0
