--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,8 @@
-version=0.05
+version=0.06
 
 name=File-Copy-Undoable
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs / TestRequires]
@@ -21,8 +18,8 @@ Rinci=1.1.29
 
 perl=5.010001
 Builtin::Logged=0
+File::MoreUtil=0
 File::Trash::Undoable=0.08
 Log::Any=0
 ;PerlX::Maybe=0
 Proc::ChildError=0
-SHARYANTO::File::Util=0.27
